Abridged tests on PRs

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,7 +24,7 @@ env:
   DOCKER_COMPOSE_FILE: ./develop/github/docker-compose.yml
   TEMPORAL_VERSION_CHECK_DISABLED: 1
   MAX_TEST_ATTEMPTS: 3
-  SHARD_COUNT: 3
+  SHARD_COUNT: 3 # NOTE: must match shard count in optimize-test-sharding.yml
 
 jobs:
   test-setup:
@@ -32,9 +32,72 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       job_matrix: ${{ steps.build_matrix.outputs.job_matrix }}
+      full_test_reason: ${{ steps.determine_scope.outputs.full_test_reason }}
       runner_x64: ${{ steps.configure_runners.outputs.runner_x64 }}
       runner_arm: ${{ steps.configure_runners.outputs.runner_arm }}
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ env.COMMIT }}
+          fetch-depth: 0
+
+      - name: Fetch base branch
+        if: ${{ github.event_name == 'pull_request' }}
+        run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
+
+      - name: Compute merge base
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          MERGE_BASE="$(git merge-base "${{ env.COMMIT }}" "${{ github.event.pull_request.base.ref }}")"
+          echo "MERGE_BASE=${MERGE_BASE}" >> "$GITHUB_ENV"
+
+      # If possible, run the "abridged" jobs on PRs to save time.
+      #
+      # The goal is to still cover all persistence code paths:
+      #   1. SQL
+      #   2. NoSQL (ie Cassandra)
+      #   3. Elasticsearch/OpenSearch
+      # All other jobs for the remaining databases only run a small set of smoke tests.
+      #
+      # Exceptions to this optimization:
+      #   1. commit is not a PR
+      #   2. `test-all-dbs` label set on PR
+      #   3. changes to persistence packages were made
+      - name: Determine test scope
+        id: determine_scope
+        run: |
+          FULL_TEST_REASON=""
+
+          event_name="${{ github.event_name }}"
+          labels='${{ toJson(github.event.pull_request.labels.*.name) }}'
+          merge_base="${MERGE_BASE:-}"
+
+          echo "event_name=$event_name"
+          echo "labels=$labels"
+          echo "merge_base=$merge_base"
+
+          # Push events (main, release branches) run all tests on all DBs
+          if [[ "$event_name" == "push" ]]; then
+            FULL_TEST_REASON="Running full tests on all DBs (push event)."
+          # Check for test-all-dbs label
+          elif echo "$labels" | jq -e 'any(. == "test-all-dbs")' > /dev/null 2>&1; then
+            FULL_TEST_REASON="Running full tests on all DBs (test-all-dbs label)."
+          # Check for persistence code changes
+          elif [[ -n "$merge_base" ]]; then
+            echo "Changed persistence files:"
+            git diff --name-only "$merge_base" "$COMMIT" | grep -E "^(common/persistence/|schema/)" || echo "(none)"
+            if git diff --name-only "$merge_base" "$COMMIT" | grep -qE "^(common/persistence/|schema/)"; then
+              FULL_TEST_REASON="Running full tests on all DBs (persistence code changes)."
+            fi
+          fi
+
+          echo "full_test_reason=$FULL_TEST_REASON" >> "$GITHUB_OUTPUT"
+
+      - name: ${{ steps.determine_scope.outputs.full_test_reason && 'ℹ️ Full tests' || 'ℹ️ Smoke tests' }}
+        run: echo "::notice::${{ steps.determine_scope.outputs.full_test_reason || 'Running smoke tests on extended DBs. Add the test-all-dbs label to run all tests on all DBs.' }}"
+
       - name: Configure runners
         id: configure_runners
         run: |
@@ -52,14 +115,18 @@ jobs:
             echo "runner_arm=$runner_arm"
           } >> "$GITHUB_OUTPUT"
 
+      # Primary DBs always get full tests, extended DBs get smoke tests (1 job) in abridged PRs.
       - name: Build job matrix
         id: build_matrix
         env:
+          FULL_TEST_REASON: ${{ steps.determine_scope.outputs.full_test_reason }}
           DB_CONFIGS: |
             cass_es:
               persistence_type: nosql
               persistence_driver: cassandra
               containers: [cassandra, elasticsearch]
+              arch: arm
+              required: true
             cass_es8:
               persistence_type: nosql
               persistence_driver: cassandra
@@ -85,6 +152,8 @@ jobs:
               persistence_type: sql
               persistence_driver: postgres12
               containers: [postgresql]
+              arch: arm
+              required: true
             postgres12_pgx:
               persistence_type: sql
               persistence_driver: postgres12_pgx
@@ -95,6 +164,11 @@ jobs:
               test_timeout: 35m
               github_timeout: 40
               sharded: true
+            smoke:
+              cmd: make functional-test-coverage
+              test_timeout: 5m
+              github_timeout: 10
+              test_args: '"-run=TestActivityTestSuite|TestSignalWorkflowTestSuite|TestWorkflowTestSuite"'
             ndc:
               cmd: make functional-test-ndc-coverage
               test_timeout: 10m
@@ -104,27 +178,44 @@ jobs:
               test_timeout: 30m
               github_timeout: 35
         run: |
+          # Convert YAML inputs to JSON for jq.
+          DBS_JSON=$(yq -o=json <<< "$DB_CONFIGS")
+          JOBS_JSON=$(yq -o=json <<< "$JOB_TYPES")
+
+          # Build the job matrix as a JSON array.
           MATRIX=$(
-            jq -c --argjson shard_count "$SHARD_COUNT" '
-              # Cross-product of every db config × every job type
-              [ to_entries[] as $db | input | to_entries[] as $job |
+            jq -c -n \
+              --argjson dbs "$DBS_JSON" \
+              --argjson jobs "$JOBS_JSON" \
+              --argjson shard_count "$SHARD_COUNT" \
+              --arg full_test_reason "$FULL_TEST_REASON" \
+            '
+            [
+              $dbs | to_entries[] as $db |
 
-                # Base entry: merge db config + job config (without sharded flag) + name
-                ($db.value + ($job.value | del(.sharded)) + {name: $db.key}) as $base |
+              # Full test suite for required DBs (or all DBs when full_test_reason is set).
+              (if $db.value.required or ($full_test_reason != "") then
+                $jobs | to_entries[] | select(.key != "smoke")
+              else
+                $jobs | to_entries[] | select(.key == "smoke")
+              end) as $job |
 
-                # If sharded, emit one entry per shard; otherwise emit one entry
-                if $job.value.sharded then
-                  range($shard_count) as $i |
-                  $base + {
-                    display_name: "\($job.key)\($i)",
-                    shard_index: $i,
-                    total_shards: $shard_count
-                  }
-                else
-                  $base + {display_name: $job.key}
-                end
-              ]
-            ' <(yq -o=json <<< "$DB_CONFIGS") <(yq -o=json <<< "$JOB_TYPES")
+              # Base entry: merge db config + job config + name
+              ($db.value + ($job.value | del(.sharded)) + {name: $db.key}) as $base |
+
+              # If sharded, emit one entry per shard; otherwise emit one entry
+              if $job.value.sharded then
+                range($shard_count) as $i |
+                $base + {
+                  display_name: "shard\($i)",
+                  shard_index: $i,
+                  total_shards: $shard_count
+                }
+              else
+                $base + {display_name: $job.key}
+              end
+            ]
+            '
           )
 
           echo "job_matrix=$MATRIX" >> "$GITHUB_OUTPUT"
@@ -173,7 +264,7 @@ jobs:
   misc-checks:
     name: Misc checks
     needs: [pre-build, test-setup]
-    runs-on: ${{ needs.test-setup.outputs.runner_x64 }}
+    runs-on: ${{ needs.test-setup.outputs.runner_arm }}
     steps:
       - uses: actions/checkout@v6
         with:
@@ -212,7 +303,7 @@ jobs:
   unit-test:
     name: Unit test
     needs: [pre-build, test-setup]
-    runs-on: ${{ needs.test-setup.outputs.runner_x64 }}
+    runs-on: ${{ needs.test-setup.outputs.runner_arm }}
     steps:
       - uses: actions/checkout@v6
         with:
@@ -427,6 +518,9 @@ jobs:
           job_name: Functional test (${{ matrix.name }}, ${{ matrix.display_name }})
           run_id: ${{ github.run_id }}
 
+      - name: ${{ matrix.display_name == 'smoke' && 'ℹ️ Smoke test' || 'ℹ️ Full test' }}
+        run: echo "::notice::${{ matrix.display_name == 'smoke' && 'This is a smoke test. Add the test-all-dbs label to run all tests on all DBs.' || needs.test-setup.outputs.full_test_reason }}"
+
       - name: Run functional test
         timeout-minutes: ${{ matrix.github_timeout }}
         run: ./develop/github/monitor_test.sh ${{ matrix.cmd }}
@@ -434,6 +528,7 @@ jobs:
           TEST_TOTAL_SHARDS: ${{ matrix.total_shards }}
           TEST_SHARD_INDEX: ${{ matrix.total_shards && matrix.shard_index }} # guard with total_shards to avoid falsy eval of shard_index=0
           TEST_SHARD_SALT: ${{ vars.TEST_SHARD_SALT || '-salt-26' }}
+          TEST_ARGS: "${{ matrix.test_args }}"
 
       - name: Print memory snapshot
         if: always()
@@ -476,7 +571,7 @@ jobs:
         uses: actions/upload-artifact@v4.4.3
         if: ${{ !cancelled() }}
         with:
-          name: junit-xml--${{github.run_id}}--${{ steps.get_job_id.outputs.job_id }}--${{github.run_attempt}}--${{matrix.name}}--shard${{matrix.shard_index}}--functional-test
+          name: junit-xml--${{ github.run_id }}--${{ steps.get_job_id.outputs.job_id }}--${{ github.run_attempt }}--${{ matrix.name }}--${{ matrix.display_name }}--functional-test
           path: ./.testoutput/junit.*.xml
           include-hidden-files: true
           retention-days: 28
