--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           go-version-file: "go.mod"
           check-latest: true
+          cache: true
 
       - name: lint actions
         run: |
@@ -34,6 +35,7 @@ jobs:
         with:
           go-version-file: "go.mod"
           check-latest: true
+          cache: true
 
       - uses: arduino/setup-protoc@v3
         with:
@@ -54,6 +56,7 @@ jobs:
         with:
           go-version-file: "go.mod"
           check-latest: true
+          cache: true
 
       - uses: arduino/setup-protoc@v3
         with:
@@ -74,6 +77,7 @@ jobs:
         with:
           go-version-file: "go.mod"
           check-latest: true
+          cache: true
 
       - uses: arduino/setup-protoc@v3
         with:
@@ -93,6 +97,7 @@ jobs:
         with:
           go-version-file: "go.mod"
           check-latest: true
+          cache: true
 
       - name: format golang import statements
         run: |
@@ -118,6 +123,7 @@ jobs:
         with:
           go-version-file: "go.mod"
           check-latest: true
+          cache: true
 
       - name: check yaml formatting
         run: make lint-yaml
@@ -133,6 +139,7 @@ jobs:
         with:
           go-version-file: "go.mod"
           check-latest: true
+          cache: true
 
       - name: lint code
         run: |
