Add a success report to track improvements to our CI (#9249)
## What changed?
WISOTT

## Why?
Help reduce the friction in our CI

## How did you test it?
- [ ] built
- [X] run locally and tested manually
- [ ] covered by existing tests
- [X] added new unit test(s)
- [ ] added new functional test(s)

## Potential risks
No

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -527,6 +527,6 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           GH_TOKEN: ${{ github.token }}
         run: |
-          go run ./cmd/tools/ci-notify \
+          go run ./cmd/tools/ci-notify alert \
             --run-id "${{ github.run_id }}" \
             --slack-webhook "$SLACK_WEBHOOK"
