--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -304,7 +304,7 @@ jobs:
 
       - name: Print test logs
         if: always()
-        run: for f in .testoutput/*.log; do [ -s "$f" ] && echo "::group::$(basename "$f")" && cat "$f" && echo "::endgroup::"; done
+        run: shopt -s nullglob; for f in .testoutput/*.log; do [ -s "$f" ] && echo "::group::$(basename "$f")" && cat "$f" && echo "::endgroup::"; done; true
 
       - name: Generate test summary
         uses: mikepenz/action-junit-report@v5.0.0-rc01
@@ -385,7 +385,7 @@ jobs:
 
       - name: Print test logs
         if: always()
-        run: for f in .testoutput/*.log; do [ -s "$f" ] && echo "::group::$(basename "$f")" && cat "$f" && echo "::endgroup::"; done
+        run: shopt -s nullglob; for f in .testoutput/*.log; do [ -s "$f" ] && echo "::group::$(basename "$f")" && cat "$f" && echo "::endgroup::"; done; true
 
       - name: Generate test summary
         uses: mikepenz/action-junit-report@v5.0.0-rc01
@@ -503,7 +503,7 @@ jobs:
 
       - name: Print test logs
         if: always()
-        run: for f in .testoutput/*.log; do [ -s "$f" ] && echo "::group::$(basename "$f")" && cat "$f" && echo "::endgroup::"; done
+        run: shopt -s nullglob; for f in .testoutput/*.log; do [ -s "$f" ] && echo "::group::$(basename "$f")" && cat "$f" && echo "::endgroup::"; done; true
 
       - name: Generate test summary
         uses: mikepenz/action-junit-report@v5.0.0-rc01
